Testing documentation formatting

--- a/00_resnet.ipynb
+++ b/00_resnet.ipynb
@@ -80,10 +80,10 @@
     "    \"\"\"The basic building block for ResNets, encompassing the residual connection.\n",
     "    \n",
     "    Args:\n",
-    "        - `inplanes`: number of input filters\n",
-    "        - `planes`: number of output filters\n",
-    "        - `stride`: stride of the first 3x3 conv\n",
-    "        - `downsample`: whether to downsample the input of the block\n",
+    "        * `inplanes`: number of input filters\n",
+    "        * `planes`: number of output filters\n",
+    "        * `stride`: stride of the first 3x3 conv\n",
+    "        * `downsample`: whether to downsample the input of the block\n",
     "    \"\"\"\n",
     "    expansion = 1\n",
     "\n",
