Finalizing ResNet documentation

--- a/00_resnet.ipynb
+++ b/00_resnet.ipynb
@@ -77,14 +77,10 @@
    "source": [
     "#export\n",
     "class BasicBlock(nn.Module):\n",
-    "    \"\"\"The basic building block for ResNets, encompassing the residual connection.\n",
-    "    \n",
-    "    Args:\n",
-    "        * `inplanes`: number of input filters\n",
-    "        * `planes`: number of output filters\n",
-    "        * `stride`: stride of the first 3x3 conv\n",
-    "        * `downsample`: whether to downsample the input of the block\n",
-    "    \"\"\"\n",
+    "    \"\"\"The basic building block for ResNets, encompassing the residual connection. Takes in\n",
+    "       `inplanes` number of input filters, outputs `planes` number of output filters, with\n",
+    "       stride `stride` on the first 3x3 conv, and an optional downsampling (`nn.Module`)\n",
+    "       on the residual output via the `downsample` parameter.\"\"\"\n",
     "    expansion = 1\n",
     "\n",
     "    def __init__(self, inplanes, planes, stride=1, downsample=None):\n",
@@ -117,14 +113,10 @@
     "\n",
     "\n",
     "class Bottleneck(nn.Module):\n",
-    "    \"\"\"The bottleneck block for ResNets, encompassing the residual connection.\n",
-    "    \n",
-    "    Args:\n",
-    "        `inplanes`: number of input filters\n",
-    "        `planes`: number of output filters\n",
-    "        `stride`: stride of the first 3x3 conv\n",
-    "        `downsample`: whether to downsample the input of the block\n",
-    "    \"\"\"\n",
+    "    \"\"\"The bottleneck building block for ResNets, encompassing the residual connection. Takes in\n",
+    "       `inplanes` number of input filters, outputs `planes` number of output filters, with\n",
+    "       stride `stride` on the first 3x3 conv, and an optional downsampling (`nn.Module`)\n",
+    "       on the residual output via the `downsample` parameter.\"\"\"\n",
     "    expansion = 4\n",
     "\n",
     "    def __init__(self, inplanes, planes, stride=1, downsample=None):\n",
