Slightly change data module to expose documentation in NBDev

--- a/01_data.ipynb
+++ b/01_data.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## BreaKHis Data Processing\n",
+    "# BreaKHis Data Processing\n",
     "\n",
     "More information about the dataset can be found in the README obtained when downloading the dataset. The important information is in the appendix of this page. All images in this dataset are captured from an ROI determined by a professional pathologist, so all images are assumed to have *a* tumor.\n",
     "\n",
@@ -351,6 +351,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
+    "def initialize_datasets(\n",
+    "    data_dir, label='tumor_class', split={'train': 0.8, 'val': 0.2}, criterion=['tumor_class'],\n",
+    "    split_transforms={'train': None, 'val': None}\n",
+    "):\n",
+    "    \"\"\"Initializes a PyTorch dataset object for the data contained in `data_dir`.\n",
+    "\n",
+    "    ## Arguments:\n",
+    "        * `data_dir` (str): the directory where the BreaKHis dataset was downloaded\n",
+    "        * `label` (str): the label to use for the dataset (either 'tumor_class' or 'tumor_type')\n",
+    "        * `split` (Dict[str, float]): a mapping of strings to floats corresponding to the percentage\n",
+    "            in each split of the dataset; must add up to 1.\n",
+    "        * `criterion` (List[str]): one of 'tumor_class' (benign/malignant) or \n",
+    "            'tumor_type' (e.g. adenosis) and/or 'magnification'\n",
+    "        * `split_transforms` (Dict[str, torchvision.transforms]): a mapping of split IDs to the\n",
+    "            corresponding transforms.\n",
+    "    ## Returns:\n",
+    "        * data_partitioned (Dict[str, List]): mapping of data corresponding to the split IDs\n",
+    "            given in `split`, and each split ID maps to a `BreaKHisDataset` encompassing the\n",
+    "            list of data points, with the proper percentage of the dataset allocated to each split ID.\n",
+    "    \"\"\"\n",
+    "    return BreaKHisDataset.initalize(\n",
+    "        data_dir, label=label, criterion=criterion, split_transforms=split_transforms\n",
+    "    )"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -391,7 +423,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_mapping = BreaKHisDataset.initalize(\n",
+    "ds_mapping = initialize_datasets(\n",
     "    '/share/nikola/export/dt372/BreaKHis_v1/',\n",
     "    label='tumor_type', criterion=['tumor_type', 'magnification'],\n",
     "    split_transforms={'train': train_transform, 'val': val_transform}\n",
@@ -415,29 +447,29 @@
     {
      "data": {
       "text/plain": [
-       "(tensor([[[2.0295, 2.0295, 2.0295,  ..., 0.6531, 1.1959, 2.0295],\n",
-       "          [2.0295, 2.0295, 1.8744,  ..., 1.5642, 2.0101, 2.0295],\n",
-       "          [2.0295, 1.8938, 1.7193,  ..., 1.6999, 2.0295, 2.0295],\n",
+       "(tensor([[[-2.1577, -2.1577, -2.1577,  ...,  1.4091,  1.4091,  1.4091],\n",
+       "          [-2.1577, -2.1577, -2.1577,  ...,  1.4091,  1.4091,  1.4091],\n",
+       "          [-2.1577, -2.1577, -2.1577,  ...,  1.4091,  1.4091,  1.3898],\n",
        "          ...,\n",
-       "          [1.4867, 1.4867, 1.7775,  ..., 1.0408, 1.8744, 2.0101],\n",
-       "          [1.5448, 1.4479, 1.4285,  ..., 1.6030, 1.7581, 1.9907],\n",
-       "          [1.4091, 1.4479, 1.4673,  ..., 1.7581, 1.8744, 1.6999]],\n",
+       "          [ 1.2541,  1.2541,  1.2735,  ...,  1.4285,  1.3704,  1.3510],\n",
+       "          [ 1.2928,  1.3122,  1.2928,  ...,  1.2928,  1.3122,  1.2928],\n",
+       "          [ 1.3510,  1.3704,  1.3316,  ...,  1.3510,  1.3122,  1.2541]],\n",
        " \n",
-       "         [[2.1051, 2.1051, 2.1051,  ..., 0.5711, 1.1218, 2.1051],\n",
-       "          [2.1051, 2.1051, 1.9478,  ..., 1.5151, 2.0855, 2.1051],\n",
-       "          [2.1051, 1.9675, 1.7904,  ..., 1.7118, 2.1051, 2.1051],\n",
+       "         [[-2.1429, -2.1429, -2.1429,  ...,  1.6921,  1.6921,  1.6528],\n",
+       "          [-2.1429, -2.1429, -2.1429,  ...,  1.7118,  1.6724,  1.6921],\n",
+       "          [-2.1429, -2.1429, -2.1429,  ...,  1.7314,  1.7314,  1.6724],\n",
        "          ...,\n",
-       "          [1.3774, 1.3774, 1.7118,  ..., 0.9251, 1.7511, 2.0855],\n",
-       "          [1.3971, 1.3184, 1.3381,  ..., 1.4168, 1.5544, 1.8298],\n",
-       "          [1.2594, 1.2594, 1.2791,  ..., 1.4561, 1.5348, 1.2594]],\n",
+       "          [ 0.4728,  0.3941,  0.3941,  ...,  0.9841,  0.9448,  0.9841],\n",
+       "          [ 0.4728,  0.4138,  0.3941,  ...,  0.8464,  0.9054,  0.8464],\n",
+       "          [ 0.4531,  0.4531,  0.3941,  ...,  0.8464,  0.8464,  0.7678]],\n",
        " \n",
-       "         [[2.2660, 2.2660, 2.2660,  ..., 1.0563, 1.4856, 2.2660],\n",
-       "          [2.2465, 2.2270, 2.0514,  ..., 1.8953, 2.2465, 2.2660],\n",
-       "          [2.2660, 1.9928, 1.8172,  ..., 2.0123, 2.2660, 2.2660],\n",
+       "         [[-1.9482, -1.9482, -1.9482,  ...,  1.5831,  1.5831,  1.5831],\n",
+       "          [-1.9482, -1.9482, -1.9482,  ...,  1.5831,  1.5636,  1.6026],\n",
+       "          [-1.9482, -1.9482, -1.9482,  ...,  1.5246,  1.5246,  1.5636],\n",
        "          ...,\n",
-       "          [1.2709, 1.2709, 1.6416,  ..., 0.9783, 1.8172, 2.2465],\n",
-       "          [1.3295, 1.2514, 1.3490,  ..., 1.4661, 1.6221, 1.9538],\n",
-       "          [1.2319, 1.3685, 1.3880,  ..., 1.5051, 1.6416, 1.4270]]]),\n",
+       "          [ 1.3100,  1.2514,  1.3100,  ...,  1.6026,  1.5441,  1.5636],\n",
+       "          [ 1.3295,  1.3100,  1.3295,  ...,  1.4661,  1.4856,  1.4856],\n",
+       "          [ 1.3295,  1.3295,  1.3295,  ...,  1.5246,  1.4856,  1.3880]]]),\n",
        " tensor([0.]))"
       ]
      },
