--- a/01_data.ipynb
+++ b/01_data.ipynb
@@ -15,16 +15,7 @@
    "source": [
     "# BreaKHis Data Processing\n",
     "\n",
-    "More information about the dataset can be found in the README obtained when downloading the dataset. The important information is in the appendix of this page. All images in this dataset are captured from an ROI determined by a professional pathologist, so all images are assumed to have *a* tumor.\n",
-    "\n",
-    "> The BreaKHis dataset is organized by benign and malignant tumors, and then by the specific tumor types:\n",
-    "- For benign tumors, the images are organized additionally by: adenosis, fibroadenoma, phyllodes_tumor, tubular_adenoma\n",
-    "- For malignant tumors, the images are organized additionally by: ductal_carcinoma, lobular_carcinoma, mucinous_carcinoma, papillary_carcinoma\n",
-    "\n",
-    "> The functions provided here will help to quickly (lazily) process the data for usage in training image classification models, while maintaining the additional information that might not be necessary. For example, if training on benign/malignant labels, the information about which specific tumor is present will still be available in the dataset definition.\n",
-    "\n",
-    "\n",
-    "> The data is anonymized, so there's no possibility of splitting at the patient level. Instead, we leave dataset splitting up to the user, but provide some utility functions to reproduce the results obtained in initial development."
+    "> The BreaKHis dataset is organized by benign and malignant tumors, and then by the specific tumor types. The functions provided here will help to quickly (lazily) process the data for usage in training image classification models, while maintaining the additional information that might not be necessary. For example, if training on benign/malignant labels, the information about which specific tumor is present will still be available in the dataset definition. The data is anonymized, so there's no possibility of splitting at the patient level. Instead, we leave dataset splitting up to the user, but provide some utility functions to reproduce the results obtained in initial development."
    ]
   },
   {
@@ -361,22 +352,7 @@
     "    data_dir, label='tumor_class', split={'train': 0.8, 'val': 0.2}, criterion=['tumor_class'],\n",
     "    split_transforms={'train': None, 'val': None}\n",
     "):\n",
-    "    \"\"\"Initializes a PyTorch dataset object for the data contained in `data_dir`.\n",
-    "\n",
-    "    ## Arguments:\n",
-    "        * `data_dir` (str): the directory where the BreaKHis dataset was downloaded\n",
-    "        * `label` (str): the label to use for the dataset (either 'tumor_class' or 'tumor_type')\n",
-    "        * `split` (Dict[str, float]): a mapping of strings to floats corresponding to the percentage\n",
-    "            in each split of the dataset; must add up to 1.\n",
-    "        * `criterion` (List[str]): one of 'tumor_class' (benign/malignant) or \n",
-    "            'tumor_type' (e.g. adenosis) and/or 'magnification'\n",
-    "        * `split_transforms` (Dict[str, torchvision.transforms]): a mapping of split IDs to the\n",
-    "            corresponding transforms.\n",
-    "    ## Returns:\n",
-    "        * data_partitioned (Dict[str, List]): mapping of data corresponding to the split IDs\n",
-    "            given in `split`, and each split ID maps to a `BreaKHisDataset` encompassing the\n",
-    "            list of data points, with the proper percentage of the dataset allocated to each split ID.\n",
-    "    \"\"\"\n",
+    "    \"\"\"Returns a `BreaKHisDataset` object for the data contained in `data_dir`.\"\"\"\n",
     "    return BreaKHisDataset.initalize(\n",
     "        data_dir, label=label, criterion=criterion, split_transforms=split_transforms\n",
     "    )"
@@ -388,8 +364,10 @@
    "source": [
     "To create the dataset, you only need one function calls. Within this function call:\n",
     "* You can specify the label type when initializing the dataset by specifying `label` in `initialize`\n",
+    "    * It must be 1 of 'tumor_class' or 'tumor_type'\n",
     "* You can make arbitrary splits of the data (within reason) when splitting the dataset via `split_dataset`\n",
     "* You can make sure to split equally within various criterion using `criterion`, which can include tumor class/tumor type, and magnification.\n",
+    "    * You can not split equally by both tumor class and tumor type (error will be thrown if attempted).\n",
     "* You can use different transforms for different splits using `split_transforms`."
    ]
   },
@@ -545,6 +523,8 @@
    "metadata": {},
    "source": [
     "## Appendix\n",
+    "\n",
+    "All images in this dataset are captured from an ROI determined by a professional pathologist, so all images are assumed to have *a* tumor.\n",
     "\n",
     "### Samples\n",
     "\n",
