--- a/01_data.ipynb
+++ b/01_data.ipynb
@@ -40,7 +40,17 @@
     "import torch\n",
     "\n",
     "from PIL import Image\n",
-    "from torchvision import transforms"
+    "from torchvision import transforms\n",
+    "\n",
+    "np.random.seed(31)\n",
+    "torch.manual_seed(31);"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For reproducibility, the random seed (for both Numpy and PyTorch) are set to 31."
    ]
   },
   {
@@ -156,7 +166,7 @@
     "        (fp, tumor, subtumor, magnification, slide_id, sequence_id), label = self.dataset[index]\n",
     "        image = Image.open(fp)\n",
     "        data = self.transform(image) if image else image\n",
-    "        return data, torch.Tensor([label])\n",
+    "        return data, torch.Tensor([label]).long().squeeze()\n",
     "    \n",
     "    def __len__(self):\n",
     "        return len(self.dataset)\n",
@@ -425,30 +435,30 @@
     {
      "data": {
       "text/plain": [
-       "(tensor([[[-2.1577, -2.1577, -2.1577,  ...,  1.4091,  1.4091,  1.4091],\n",
-       "          [-2.1577, -2.1577, -2.1577,  ...,  1.4091,  1.4091,  1.4091],\n",
-       "          [-2.1577, -2.1577, -2.1577,  ...,  1.4091,  1.4091,  1.3898],\n",
+       "(tensor([[[-2.4291, -2.4291, -2.4291,  ...,  0.8082,  0.7888,  0.8082],\n",
+       "          [-2.4291, -2.4291, -2.4291,  ...,  0.8082,  0.7888,  0.7888],\n",
+       "          [-2.4291, -2.4291, -2.4291,  ...,  0.8082,  0.8082,  0.7501],\n",
        "          ...,\n",
-       "          [ 1.2541,  1.2541,  1.2735,  ...,  1.4285,  1.3704,  1.3510],\n",
-       "          [ 1.2928,  1.3122,  1.2928,  ...,  1.2928,  1.3122,  1.2928],\n",
-       "          [ 1.3510,  1.3704,  1.3316,  ...,  1.3510,  1.3122,  1.2541]],\n",
+       "          [ 0.6725,  0.6144,  0.2654,  ...,  0.4399,  0.3624,  0.0522],\n",
+       "          [ 0.4981,  0.6338,  0.5174,  ...,  0.3236,  0.3817,  0.1297],\n",
+       "          [ 0.3430,  0.3624,  0.4593,  ...,  0.3624,  0.3042,  0.0522]],\n",
        " \n",
-       "         [[-2.1429, -2.1429, -2.1429,  ...,  1.6921,  1.6921,  1.6528],\n",
-       "          [-2.1429, -2.1429, -2.1429,  ...,  1.7118,  1.6724,  1.6921],\n",
-       "          [-2.1429, -2.1429, -2.1429,  ...,  1.7314,  1.7314,  1.6724],\n",
+       "         [[-2.4183, -2.4183, -2.4183,  ...,  0.9251,  0.9251,  0.9251],\n",
+       "          [-2.4183, -2.4183, -2.4183,  ...,  0.9251,  0.9054,  0.9251],\n",
+       "          [-2.4183, -2.4183, -2.4183,  ...,  0.9251,  0.9251,  0.9054],\n",
        "          ...,\n",
-       "          [ 0.4728,  0.3941,  0.3941,  ...,  0.9841,  0.9448,  0.9841],\n",
-       "          [ 0.4728,  0.4138,  0.3941,  ...,  0.8464,  0.9054,  0.8464],\n",
-       "          [ 0.4531,  0.4531,  0.3941,  ...,  0.8464,  0.8464,  0.7678]],\n",
+       "          [ 0.2564,  0.2564, -0.0189,  ...,  0.5121,  0.4531,  0.0598],\n",
+       "          [ 0.0598,  0.1778,  0.1581,  ...,  0.3744,  0.4138,  0.1188],\n",
+       "          [-0.1566, -0.0976,  0.0204,  ...,  0.4531,  0.3548,  0.0991]],\n",
        " \n",
-       "         [[-1.9482, -1.9482, -1.9482,  ...,  1.5831,  1.5831,  1.5831],\n",
-       "          [-1.9482, -1.9482, -1.9482,  ...,  1.5831,  1.5636,  1.6026],\n",
-       "          [-1.9482, -1.9482, -1.9482,  ...,  1.5246,  1.5246,  1.5636],\n",
+       "         [[-2.2214, -2.2214, -2.2214,  ...,  0.8027,  0.8027,  0.8027],\n",
+       "          [-2.2214, -2.2214, -2.2214,  ...,  0.7832,  0.7637,  0.7832],\n",
+       "          [-2.2214, -2.2214, -2.2214,  ...,  0.8027,  0.7832,  0.7832],\n",
        "          ...,\n",
-       "          [ 1.3100,  1.2514,  1.3100,  ...,  1.6026,  1.5441,  1.5636],\n",
-       "          [ 1.3295,  1.3100,  1.3295,  ...,  1.4661,  1.4856,  1.4856],\n",
-       "          [ 1.3295,  1.3295,  1.3295,  ...,  1.5246,  1.4856,  1.3880]]]),\n",
-       " tensor([0.]))"
+       "          [ 1.0368,  0.9978,  0.7052,  ...,  0.9588,  0.9588,  0.6661],\n",
+       "          [ 0.8807,  0.9978,  0.9198,  ...,  0.8807,  0.9783,  0.8027],\n",
+       "          [ 0.7442,  0.8027,  0.8612,  ...,  0.9588,  0.9588,  0.7637]]]),\n",
+       " tensor(0))"
       ]
      },
      "execution_count": null,
@@ -458,26 +468,6 @@
    ],
    "source": [
     "tr_ds[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(6316, 1593)"
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(tr_ds), len(val_ds)"
    ]
   },
   {
@@ -505,7 +495,7 @@
     {
      "data": {
       "text/plain": [
-       "(torch.Size([32, 3, 224, 224]), torch.Size([32, 1]))"
+       "(torch.Size([32, 3, 224, 224]), torch.Size([32]))"
       ]
      },
      "execution_count": null,
