Add visualization functionality, update docs

--- a/00_resnet.ipynb
+++ b/00_resnet.ipynb
@@ -35,6 +35,9 @@
    "outputs": [],
    "source": [
     "#export\n",
+    "import os\n",
+    "import shutil\n",
+    "import time\n",
     "import torch.nn as nn\n",
     "import torch.utils.model_zoo as model_zoo\n",
     "\n",
@@ -162,14 +165,14 @@
    "source": [
     "#export\n",
     "class ResNet(nn.Module):\n",
-    "    \"\"\"Constructs a ResNet using a block specification and number of layers.\n",
-    "    \n",
-    "    Args:\n",
-    "        `block`: the building block for the ResNet (i.e. `BasicBlock` or `Bottleneck`)\n",
-    "        `layers`: a list of 4 integers, specifying the number of layers in each block\n",
-    "        `num_classes`: the number of output classes (defaults to 1000)\n",
-    "    \"\"\"\n",
-    "    def __init__(self, block, layers, num_classes=1000):\n",
+    "    \"\"\"Constructs a ResNet using a block specification and number of layers. Also specifies where to\n",
+    "       output training logs and model/system state.\"\"\"\n",
+    "    def __init__(\n",
+    "        self, block, layers, num_classes=1000,\n",
+    "        log_dir = '/share/nikola/export/dt372/breakhis_gradcam/logs',\n",
+    "        save_dir = '/share/nikola/export/dt372/breakhis_gradcam/models',\n",
+    "        create_log_and_save_dirs=True\n",
+    "    ):\n",
     "        super(ResNet, self).__init__()\n",
     "        self.inplanes = 64\n",
     "        self.conv1 = nn.Conv2d(3, 64, kernel_size=7, stride=2, padding=3,\n",
@@ -190,6 +193,27 @@
     "            elif isinstance(m, nn.BatchNorm2d):\n",
     "                nn.init.constant_(m.weight, 1)\n",
     "                nn.init.constant_(m.bias, 0)\n",
+    "            \n",
+    "        if create_log_and_save_dirs:\n",
+    "            self.setup_logging_and_output_dirs(log_dir, save_dir)\n",
+    "                \n",
+    "    def setup_logging_and_output_dirs(self, log_dir, save_dir):\n",
+    "        timestamp = time.strftime(\"%Y-%m-%d-%H-%M-%S\", time.gmtime())\n",
+    "        self.log_dir = os.path.join(log_dir, timestamp)\n",
+    "        os.mkdir(self.log_dir)\n",
+    "        self.save_dir = os.path.join(save_dir, timestamp)\n",
+    "        os.mkdir(self.save_dir)\n",
+    "    \n",
+    "    def clear_logging_and_output_dirs(self):\n",
+    "        assert self.log_dir and self.save_dir, \"The logging and output directories were never created.\"\n",
+    "        print(\"Removing directory %s and all contents.\" % self.log_dir)\n",
+    "        shutil.rmtree(self.log_dir, ignore_errors=False, onerror=None)\n",
+    "        print(\"Removing directory %s and all contents.\" % self.save_dir)\n",
+    "        shutil.rmtree(self.save_dir, ignore_errors=False, onerror=None)\n",
+    "        \n",
+    "        print(\"Resetting %s and %s.\" % (self.log_dir, self.save_dir))\n",
+    "        os.mkdir(self.log_dir)\n",
+    "        os.mkdir(self.save_dir)\n",
     "\n",
     "    def _make_layer(self, block, planes, blocks, stride=1):\n",
     "        downsample = None\n",
@@ -226,6 +250,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Constructs a ResNet. While you should only use the functions below, note the optional arguments here, as they are useful for tracking metrics when training the network, as can be seen in the utilities package.\n",
+    "* `log_dir` defines the directory where a logging subdirectory will be created during training to output metrics (loss, accuracy) during training\n",
+    "* `save_dir` defines the directory where a subdirectory will be created during training to output model state or system state (i.e. model + optimizer + scheduler + metrics) during training\n",
+    "\n",
+    "These directories will only be created if `create_log_and_save_dirs` is specified as True (by default, it is)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -233,10 +268,7 @@
    "source": [
     "#export\n",
     "def resnet18(pretrained=False, **kwargs):\n",
-    "    \"\"\"Constructs a ResNet-18 model.\n",
-    "    Args:\n",
-    "        pretrained (bool): If True, returns a model pre-trained on ImageNet\n",
-    "    \"\"\"\n",
+    "    \"\"\"Constructs a ResNet-18 model.\"\"\"\n",
     "    model = ResNet(BasicBlock, [2, 2, 2, 2], **kwargs)\n",
     "    if pretrained:\n",
     "        model.load_state_dict(model_zoo.load_url(model_urls['resnet18']), strict=False)\n",
@@ -244,10 +276,7 @@
     "\n",
     "\n",
     "def resnet34(pretrained=False, **kwargs):\n",
-    "    \"\"\"Constructs a ResNet-34 model.\n",
-    "    Args:\n",
-    "        pretrained (bool): If True, returns a model pre-trained on ImageNet\n",
-    "    \"\"\"\n",
+    "    \"\"\"Constructs a ResNet-34 model.\"\"\"\n",
     "    model = ResNet(BasicBlock, [3, 4, 6, 3], **kwargs)\n",
     "    if pretrained:\n",
     "        model.load_state_dict(model_zoo.load_url(model_urls['resnet34']), strict=False)\n",
@@ -255,10 +284,7 @@
     "\n",
     "\n",
     "def resnet50(pretrained=False, **kwargs):\n",
-    "    \"\"\"Constructs a ResNet-50 model.\n",
-    "    Args:\n",
-    "        pretrained (bool): If True, returns a model pre-trained on ImageNet\n",
-    "    \"\"\"\n",
+    "    \"\"\"Constructs a ResNet-50 model.\"\"\"\n",
     "    model = ResNet(Bottleneck, [3, 4, 6, 3], **kwargs)\n",
     "    if pretrained:\n",
     "        model.load_state_dict(model_zoo.load_url(model_urls['resnet50']), strict=False)\n",
@@ -266,10 +292,7 @@
     "\n",
     "\n",
     "def resnet101(pretrained=False, **kwargs):\n",
-    "    \"\"\"Constructs a ResNet-101 model.\n",
-    "    Args:\n",
-    "        pretrained (bool): If True, returns a model pre-trained on ImageNet\n",
-    "    \"\"\"\n",
+    "    \"\"\"Constructs a ResNet-101 model.\"\"\"\n",
     "    model = ResNet(Bottleneck, [3, 4, 23, 3], **kwargs)\n",
     "    if pretrained:\n",
     "        model.load_state_dict(model_zoo.load_url(model_urls['resnet101']), strict=False)\n",
@@ -277,10 +300,7 @@
     "\n",
     "\n",
     "def resnet152(pretrained=False, **kwargs):\n",
-    "    \"\"\"Constructs a ResNet-152 model.\n",
-    "    Args:\n",
-    "        pretrained (bool): If True, returns a model pre-trained on ImageNet\n",
-    "    \"\"\"\n",
+    "    \"\"\"Constructs a ResNet-152 model.\"\"\"\n",
     "    model = ResNet(Bottleneck, [3, 8, 36, 3], **kwargs)\n",
     "    if pretrained:\n",
     "        model.load_state_dict(model_zoo.load_url(model_urls['resnet152']), strict=False)\n",
@@ -291,7 +311,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These are the main functions by which you should be constructing ResNets, as they correspond to the structures used when training on ImageNet. For example:"
+    "These are the main functions by which you should be constructing ResNets, as they correspond to the structures used when training on ImageNet. For each of these functions\n",
+    "* The model can be instantiated using pretrained weights by specifying the `pretrained` argument as `True`\n",
+    "* The number of classes can be passed in as one of the keyword arguments (see below for an example)\n",
+    "* A logging directory and save directory can be passed in as keyword arguments for tracking metrics and system state during training.\n",
+    "\n",
+    "As a small example:"
    ]
   },
   {
