--- a/01_data.ipynb
+++ b/01_data.ipynb
@@ -156,6 +156,9 @@
     "            ])\n",
     "        }\n",
     "    }\n",
+    "    index_mapping = {\n",
+    "        k: {iv: kv for (kv, iv) in v.items()} for (k, v) in label_mapping.items()\n",
+    "    }\n",
     "\n",
     "    def __init__(self, dataset, transform=None):\n",
     "        self.dataset = dataset\n",
@@ -364,8 +367,37 @@
     "):\n",
     "    \"\"\"Returns a `BreaKHisDataset` object for the data contained in `data_dir`.\"\"\"\n",
     "    return BreaKHisDataset.initalize(\n",
-    "        data_dir, label=label, criterion=criterion, split_transforms=split_transforms\n",
+    "        data_dir, label=label, criterion=criterion, split=split, split_transforms=split_transforms\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'tumor_class': {0: 'benign', 1: 'malignant'},\n",
+       " 'tumor_type': {0: 'adenosis',\n",
+       "  1: 'fibroadenoma',\n",
+       "  2: 'phyllodes_tumor',\n",
+       "  3: 'tubular_adenoma',\n",
+       "  4: 'ductal_carcinoma',\n",
+       "  5: 'lobular_carcinoma',\n",
+       "  6: 'mucinous_carcinoma',\n",
+       "  7: 'papillary_carcinoma'}}"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#hide\n",
+    "BreaKHisDataset.index_mapping"
    ]
   },
   {
