--- a/00_resnet.ipynb
+++ b/00_resnet.ipynb
@@ -63,9 +63,16 @@
     "    return nn.Conv2d(\n",
     "        in_planes, out_planes, kernel_size=3, stride=stride,\n",
     "        padding=1, bias=False\n",
-    "    )\n",
-    "\n",
-    "\n",
+    "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
     "def conv1x1(in_planes, out_planes, stride=1):\n",
     "    \"\"\"Return a 1x1 convolution taking in `in_planes` filters and outputting\n",
     "       `out_planes` filters with padding and stride `stride`.\"\"\"\n",
@@ -112,9 +119,16 @@
     "        out += residual\n",
     "        out = self.relu(out)\n",
     "\n",
-    "        return out\n",
-    "\n",
-    "\n",
+    "        return out"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#export\n",
     "class Bottleneck(nn.Module):\n",
     "    \"\"\"The bottleneck building block for ResNets, encompassing the residual connection. Takes in\n",
     "       `inplanes` number of input filters, outputs `planes` number of output filters, with\n",
