Add testing flags for CI

--- a/00_resnet.ipynb
+++ b/00_resnet.ipynb
@@ -339,6 +339,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#example\n",
     "model = resnet50(pretrained=True, num_classes=4);"
    ]
   },
@@ -534,6 +535,7 @@
     }
    ],
    "source": [
+    "#example\n",
     "model"
    ]
   },
