--- a/01_data.ipynb
+++ b/01_data.ipynb
@@ -419,6 +419,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#example\n",
     "train_transform = transforms.Compose([\n",
     "    transforms.RandomRotation(90),\n",
     "    transforms.RandomHorizontalFlip(0.8),\n",
@@ -443,6 +444,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#example\n",
     "ds_mapping = initialize_datasets(\n",
     "    '/share/nikola/export/dt372/BreaKHis_v1/',\n",
     "    label='tumor_type', criterion=['tumor_type', 'magnification'],\n",
@@ -456,6 +458,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#example\n",
     "tr_ds, val_ds = ds_mapping['train'], ds_mapping['val']"
    ]
   },
@@ -499,6 +502,7 @@
     }
    ],
    "source": [
+    "#example\n",
     "tr_ds[0]"
    ]
   },
@@ -515,6 +519,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#example\n",
     "tr_dl = torch.utils.data.DataLoader(tr_ds, batch_size=32, shuffle=True)\n",
     "val_dl = torch.utils.data.DataLoader(val_ds, batch_size=32)"
    ]
@@ -536,6 +541,7 @@
     }
    ],
    "source": [
+    "#example\n",
     "x, y = next(iter(tr_dl))\n",
     "x.shape, y.shape"
    ]
