--- a/02_utils.ipynb
+++ b/02_utils.ipynb
@@ -301,6 +301,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#example\n",
     "from breakhis_gradcam.data import initialize_datasets\n",
     "from breakhis_gradcam.resnet import resnet18\n",
     "from torch import nn\n",
@@ -356,6 +357,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#example\n",
     "ds_mapping = initialize_datasets(\n",
     "    '/share/nikola/export/dt372/BreaKHis_v1/',\n",
     "    label='tumor_class', criterion=['tumor_type', 'magnification'],\n",
@@ -369,6 +371,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#example\n",
     "tr_ds, val_ds = ds_mapping['train'], ds_mapping['val']"
    ]
   },
@@ -378,6 +381,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#example\n",
     "tr_dl = torch.utils.data.DataLoader(tr_ds, batch_size=32, shuffle=True)\n",
     "val_dl = torch.utils.data.DataLoader(val_ds, batch_size=32)"
    ]
@@ -388,6 +392,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#example\n",
     "model = resnet18(pretrained=True, num_classes=2)\n",
     "if torch.cuda.is_available():\n",
     "    model = model.cuda()\n",
@@ -432,6 +437,7 @@
     }
    ],
    "source": [
+    "#example\n",
     "clear_logging_handlers = setup_logging_streams(model, log_to_file=True, log_to_stdout=True)\n",
     "try:\n",
     "    tr_loss, tr_acc = train(\n",
@@ -471,6 +477,7 @@
     }
    ],
    "source": [
+    "#example\n",
     "model.clear_logging_and_output_dirs()"
    ]
   },
@@ -574,6 +581,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#example\n",
     "model = resnet18(pretrained=True, num_classes=2)\n",
     "if torch.cuda.is_available():\n",
     "    model = model.cuda()\n",
@@ -615,6 +623,7 @@
     }
    ],
    "source": [
+    "#example\n",
     "clear_logging_handlers = setup_logging_streams(model, log_to_file=True, log_to_stdout=False)\n",
     "for epoch in range(num_epochs):\n",
     "    tr_loss, tr_acc = train(\n",
@@ -648,6 +657,7 @@
     }
    ],
    "source": [
+    "#example\n",
     "os.listdir(model.save_dir)"
    ]
   },
@@ -672,6 +682,7 @@
     }
    ],
    "source": [
+    "#example\n",
     "_, tr_acc_no_mixup = validate(model, epoch + 1, tr_dl, criterion['val'], tta=False, logging_frequency=25)\n",
     "print(\"Training accuracy after %d epochs is %.5f\" % (epoch + 1, tr_acc_no_mixup))"
    ]
