--- a/index.ipynb
+++ b/index.ipynb
@@ -30,7 +30,10 @@
     "## Later\n",
     "\n",
     "* Examples of how to use this package\n",
-    "* Visualizations of results (GradCAM, corresponding object detection) after training using models defined by this package\n"
+    "* Using some form of unsupervised bounding box detection (e.g. attention cropping) to pull bounding box predictions\n",
+    "    * This is probably more reasonable to do with a dataset that has these labels, as more training can be done to get better bounding box predictions\n",
+    "* Using a variant of the SimCLR framework to fine-tune the trained models based on similarity between detected regions of slides within the same subclass\n",
+    "\n"
    ]
   },
   {
@@ -55,6 +58,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
